--- a/November11/index.html
+++ b/November11/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Hello There Sir!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
@@ -48,4 +48,10 @@ git init will initialize an empty git repository
 directorys with a . infront of them are hidden files. Won't appear unless you request them
 
 
+
+git add to ad files to repository
+git add . will add every file, which is problematic. Don't do it
+
+creates a message when you git commit
+git commit -m "My first commit (Adding November11)"
 -->
