--- a/November11/index.html
+++ b/November11/index.html
@@ -54,4 +54,28 @@ git add . will add every file, which is problematic. Don't do it
 
 creates a message when you git commit
 git commit -m "My first commit (Adding November11)"
--->
+
+
+
+git status to see the staus
+git add to add a file
+git diff to see what is different between what is on your machine and what github has
+
+git log --oneline
+The log of individual changes
+use git show followed by the string to get what the commit looks like
+If you do it a second time, it shows you the new file
+
+
+This will commit to the chosen remote git repository
+
+
+
+git remote add origin git@github.com:AKolari/test-repo.git
+This will create the remote repository at the location. We usually call it origin
+
+git push origin master pushes the master branch to origin
+
+make repo names lowercase
+
+git pull origin master to pull master branch
